Moved blog project to appEngine, added links to main website.

--- a/my_blog.html
+++ b/my_blog.html
@@ -1,10 +1,11 @@
 <html>
-<head>
-  <title>My Blog</title>
-  <link rel="stylesheet" href="my_blog.css">
-</head>
-<div>
+  <head>
+    <title>My Blog</title>
+    <link href="/static/my_blog.css" rel="stylesheet">
+  </head>
   <body>
+    <a href="/aboutme">About Me</a>
+    <a href ="/post"> Here are my posts</a>
   <h1><center>My Blog</h1>
   <header>Summer 2018</header>
   <p><center>My summer at CSSI consisted of</p>
@@ -15,12 +16,9 @@
   <li>and much more</li>
   <br>
   <img class="pic"src="https://images.axios.com/qDC9jzNukjeXYykTwiQTW22oJIs=/0x600:5760x3840/1920x1080/2018/03/05/1520253850455.jpg">
-
-</body>
-</div>
 <br>
 <br>
 <div>
-  <body>
-    <p><center>I hope to learn about...</p>
+  <script src="/static"></script>
+</body>
 </html>
